syntax = "proto3";

option go_package = "./helloworld/v1";

package helloworld.v1;

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}